Setting up modules and sub modules in app.js

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+  <meta name="description" content="A modern mobile web apps boilerplate like no other.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Material Design Lite</title>
+  <title>Rexon::yo-ng-app-boilerplate</title>
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -29,22 +29,33 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="styles/style.css">
-  <style>
-    #view-source {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
-      z-index: 900;
-    }
-  </style>
+
 </head>
-<body ng-app="yoNgBoilerPlateApp" class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+<body ng-app="rexon" class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 <!--<div ng-include="'views/common/header.html'" ></div>-->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <div ng-include="'views/common/headerNav.html'" ></div>
+  <!--<div ng-include="'views/common/headerNav.html'" ></div>-->
+
+  <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
+    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+    </div>
+    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+      <h3>Name &amp; Title</h3>
+    </div>
+    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+    </div>
+    <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
+      <a href="#overview" class="mdl-layout__tab is-active">Overview</a>
+      <a href="#features" class="mdl-layout__tab">Features</a>
+      <a href="#details" class="mdl-layout__tab">Details</a>
+      <a href="#technology" class="mdl-layout__tab">Technology</a>
+      <a href="#faq" class="mdl-layout__tab">FAQ</a>
+      <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
+        <i class="material-icons" role="presentation">add</i>
+        <span class="visuallyhidden">Add</span>
+      </button>
+    </div>
+  </header>
 
   <!--Main Content View-->
   <div ui-view></div>
@@ -53,11 +64,12 @@
   <div ng-include="'views/common/footerNav.html'" ></div>
 </div>
 <!--<div ng-include="'views/common/footer.html'" ></div>-->
-<a href="https://github.com/google/material-design-lite/blob/master/templates/text-only/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
+<a href="https://github.com/xrexonx/yo-ng-boilerplate" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
 <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular.min.js"></script>
-<script src="scripts/vendor/angular-ui-router.min.js"></script>
+<script src="scripts/vendors/angular-ui-router.min.js"></script>
 <script src="scripts/app.js"></script>
+<script src="scripts/routes.js"></script>
 <script src="scripts/controllers/about.js"></script>
 <script src="scripts/controllers/main.js"></script>
 </body>
