--- a/app/index.html
+++ b/app/index.html
@@ -45,11 +45,10 @@
     <div class="mdl-layout--large-screen-only mdl-layout__header-row">
     </div>
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-      <a href="#overview" class="mdl-layout__tab is-active">Overview</a>
-      <a href="#features" class="mdl-layout__tab">Features</a>
-      <a href="#details" class="mdl-layout__tab">Details</a>
-      <a href="#technology" class="mdl-layout__tab">Technology</a>
-      <a href="#faq" class="mdl-layout__tab">FAQ</a>
+      <a ui-sref="app({ view: 'main' })"  class="mdl-layout__tab is-active">Overview</a>
+      <a ui-sref="app({ view: 'features' })" class="mdl-layout__tab">Features</a>
+      <a ui-sref="app({ view: 'details' })" class="mdl-layout__tab">Details</a>
+      <a ui-sref="app({ view: 'technology' })" class="mdl-layout__tab">Technology</a>
       <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
         <i class="material-icons" role="presentation">add</i>
         <span class="visuallyhidden">Add</span>
@@ -71,6 +70,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/routes.js"></script>
 <script src="scripts/controllers/about.js"></script>
-<script src="scripts/controllers/main.js"></script>
+<!--<script src="scripts/controllers/main.js"></script>-->
+<script src="scripts/controllers/mainController.js"></script>
 </body>
 </html>
