Refactor templates according to standards

--- a/app/index.html
+++ b/app/index.html
@@ -1,69 +1,73 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="A modern mobile web apps boilerplate like no other.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Rexon::yo-ng-app-boilerplate</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="A modern mobile web apps boilerplate like no other.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rexon::yo-ng-app-boilerplate</title>
 
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <link rel="icon" sizes="192x192" href="images/android-desktop.png">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="images/android-desktop.png">
 
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Material Design Lite">
-  <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Material Design Lite">
+    <link rel="apple-touch-icon-precomposed" href="images/ios-desktop.png">
 
-  <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-  <meta name="msapplication-TileColor" content="#3372DF">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#3372DF">
 
-  <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.png">
 
 
-  <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="styles/style.css">
 
 </head>
 <body ng-app="rexon" class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
 <!--<div ng-include="'views/common/header.html'" ></div>-->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-  <!--<div ng-include="'views/common/headerNav.html'" ></div>-->
+    <!--<div ng-include="'views/common/headerNav.html'" ></div>-->
 
-  <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
-    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-    </div>
-    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-      <h3>Name &amp; Title</h3>
-    </div>
-    <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-    </div>
-    <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
-      <a ui-sref="app({ view: 'main' })"  class="mdl-layout__tab is-active">Overview</a>
-      <a ui-sref="app({ view: 'features' })" class="mdl-layout__tab">Features</a>
-      <a ui-sref="app({ view: 'details' })" class="mdl-layout__tab">Details</a>
-      <a ui-sref="app({ view: 'technology' })" class="mdl-layout__tab">Technology</a>
-      <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent" id="add">
-        <i class="material-icons" role="presentation">add</i>
-        <span class="visuallyhidden">Add</span>
-      </button>
-    </div>
-  </header>
+    <header class="mdl-layout__header mdl-layout__header--scroll mdl-color--primary">
+        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+        </div>
+        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+            <h3>Name &amp; Title</h3>
+        </div>
+        <div class="mdl-layout--large-screen-only mdl-layout__header-row">
+        </div>
+        <div class="mdl-layout__tab-bar mdl-js-ripple-effect mdl-color--primary-dark">
+            <a ui-sref="app({ view: 'main' })" class="mdl-layout__tab is-active">Overview</a>
+            <a ui-sref="app({ view: 'features' })" class="mdl-layout__tab">Features</a>
+            <a ui-sref="app({ view: 'details' })" class="mdl-layout__tab">Details</a>
+            <a ui-sref="app({ view: 'technology' })" class="mdl-layout__tab">Technology</a>
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored mdl-shadow--4dp mdl-color--accent"
+                    id="add">
+                <i class="material-icons" role="presentation">add</i>
+                <span class="visuallyhidden">Add</span>
+            </button>
+        </div>
+    </header>
 
-  <!--Main Content View-->
-  <div ui-view></div>
+    <!--Main Content View-->
+    <div ui-view></div>
 
 
-  <div ng-include="'views/common/footerNav.html'" ></div>
+    <div ng-include="'views/common/footerNav.html'"></div>
 </div>
 <!--<div ng-include="'views/common/footer.html'" ></div>-->
-<a href="https://github.com/xrexonx/yo-ng-boilerplate" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
+<a href="https://github.com/xrexonx/yo-ng-boilerplate" target="_blank" id="view-source"
+   class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View
+    Source</a>
 <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular.min.js"></script>
 <script src="scripts/vendors/angular-ui-router.min.js"></script>
