Removed cdn vendors

--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,10 @@
 <a href="https://github.com/xrexonx/yo-ng-boilerplate" target="_blank" id="view-source"
    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View
     Source</a>
-<script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.2/angular.min.js"></script>
+
+<script src="scripts/vendors/angular.min.js"></script>
 <script src="scripts/vendors/angular-ui-router.min.js"></script>
+<script src="scripts/vendors/material.min.js"></script>
 
 <script src="scripts/app.js"></script>
 <script src="scripts/routes.js"></script>
