Two way data biding blah blah blah.

--- a/app/index.html
+++ b/app/index.html
@@ -69,16 +69,16 @@
    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View
     Source</a>
 
-<script src="scripts/vendors/angular.min.js"></script>
-<script src="scripts/vendors/angular-ui-router.min.js"></script>
-<script src="scripts/vendors/material.min.js"></script>
+<script src="build/vendors/angular.min.js"></script>
+<script src="build/vendors/angular-ui-router.min.js"></script>
+<script src="build/vendors/material.min.js"></script>
 
 <script src="scripts/app.js"></script>
 <script src="scripts/routes.js"></script>
 
-<script src="scripts/controllers/mainController.js"></script>
-<script src="scripts/controllers/detailsController.js"></script>
-<script src="scripts/controllers/featuresController.js"></script>
-<script src="scripts/controllers/technologyController.js"></script>
+<script src="build/js/services.min.js"></script>
+<script src="build/js/controllers.min.js"></script>
+<script src="build/js/filters.min.js"></script>
+
 </body>
 </html>
